--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     </head>
 
     <body>
-        
+        <div class="header">
+            <div>Header Logo</div>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
     </body>
 </html>
