--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <head>
         <title>Project: Landing Page</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <div class="header">
-            <div>Header Logo</div>
+            <div class="logo">Header Logo</div>
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
             </ul>
         </div>
     </body>
