--- a/index.html
+++ b/index.html
@@ -16,5 +16,17 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
+
+        <div class="hero">
+            <div>
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is slower contrast.</p>
+                <button>Sign up</button>
+            </div>
+
+            <div>
+                <img src="#" alt="this is a placeholder for an image">
+            </div>
+        </div>
     </body>
 </html>
