--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 
         <div class="hero">
             <div>
-                <h2>This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is slower contrast.</p>
-                <button>Sign up</button>
+                <div class="hero-title">This website is awesome</div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. It's smaller font and the color is slower contrast.
+                    <button>Sign up</button>
+                </div>
             </div>
 
-            <div>
-                <img src="#" alt="this is a placeholder for an image">
-            </div>
+            <img src="#" alt="this is a placeholder for an image">
         </div>
     </body>
 </html>
