--- a/index.html
+++ b/index.html
@@ -27,5 +27,28 @@
 
             <img src="#" alt="this is a placeholder for an image">
         </div>
+
+        <div class="info-section">
+            <div class="title">Some random information.</div>
+            <div class="container">
+                <div>
+                    <div class="box"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="box"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="box"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <div class="box"></div>
+                    <div class="subtext">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+            
+        </div>
     </body>
 </html>
