Add and style quote section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                     <div class="subtext">this is some subtext under an illustration or image</div>
                 </div>
             </div>
-            
+        </div>
+
+        <div class="quote-section">
+            <div class="pepe">
+                <div class="text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="signature">-Thor, God of Thunder</div>
+            </div>
         </div>
     </body>
 </html>
