--- a/index.html
+++ b/index.html
@@ -56,5 +56,15 @@
                 <div class="signature">-Thor, God of Thunder</div>
             </div>
         </div>
+
+        <div class="call-section">
+            <div class="window">
+                <div>
+                    <div class="window-title">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking the button right over there!</div>
+                </div>
+                <button class="white-border-button">Sign up</button>
+            </div>
+        </div>
     </body>
 </html>
