Add and style footer

--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
                 <button class="white-border-button">Sign up</button>
             </div>
         </div>
+
+        <div class="footer">Copyright © ricomateo</div>
     </body>
 </html>
