Add link to the sign up buttons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div>
                 <div class="hero-title">This website is awesome</div>
                 <div class="hero-text">This website has some subtext that goes here under the main title. It's smaller font and the color is slower contrast.
-                    <button>Sign up</button>
+                    <button><a href="#">Sign up</a></button>
                 </div>
             </div>
 
@@ -63,7 +63,7 @@
                     <div class="window-title">Call to action! It's time!</div>
                     <div>Sign up for our product by clicking the button right over there!</div>
                 </div>
-                <button class="white-border-button">Sign up</button>
+                <button class="white-border-button"><a href="#">Sign up</a></button>
             </div>
         </div>
 
